--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="org.blueclub.presentation.home.HomeViewModel" />
@@ -196,9 +198,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="20dp"
-                android:text="@string/income_input_hint"
+                android:text="@{viewModel.totalIncome == 0 ? @string/income_input_hint : viewModel.totalIncomeString}"
                 android:textAppearance="@style/TextAppearance.H7_Bold"
-                android:textColor="@color/coolgray_04"
+                android:textColor="@{viewModel.totalIncome == 0 ? @color/coolgray_04 : @color/coolgray_10}"
                 app:layout_constraintStart_toEndOf="@+id/tv_income"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -208,12 +210,68 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="16dp"
+                android:visibility="@{viewModel.totalIncome == 0 ? View.VISIBLE : View.INVISIBLE}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_month_income"
                 app:lottie_autoPlay="true"
                 app:lottie_loop="true"
                 app:lottie_rawRes="@raw/home_graph" />
+
+            <TextView
+                android:id="@+id/tv_bubble_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:background="@drawable/background_bubble"
+                android:paddingHorizontal="10dp"
+                android:paddingVertical="2dp"
+                android:textAppearance="@style/TextAppearance.Caption3"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="@+id/pb_home"
+                app:layout_constraintTop_toBottomOf="@+id/tv_month_income"
+                app:visibility="@{viewModel.totalIncome > 0}"
+                tools:text="70%" />
+
+
+            <ImageView
+                android:id="@+id/iv_bubble_below"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="4dp"
+                android:src="@drawable/ic_triangle_down"
+                app:layout_constraintBottom_toTopOf="@+id/pb_home"
+                app:layout_constraintStart_toStartOf="@+id/pb_home"
+                app:visibility="@{viewModel.totalIncome > 0}" />
+
+            <ProgressBar
+                android:id="@+id/pb_home"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="0dp"
+                android:layout_height="12dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="8dp"
+                android:max="100"
+                android:progress="@{(viewModel.progress > 3) ? viewModel.progress : 3 }"
+                android:progressDrawable="@drawable/progressbar_goal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_bubble_amount"
+                app:visibility="@{viewModel.totalIncome > 0}"
+                tools:progress="20" />
+
+            <TextView
+                android:id="@+id/tv_goal_income"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="@{viewModel.goalIncome}"
+                android:textAppearance="@style/TextAppearance.Caption3"
+                android:textColor="@color/coolgray_05"
+                app:layout_constraintEnd_toEndOf="@id/pb_home"
+                app:layout_constraintTop_toBottomOf="@id/pb_home"
+                app:visibility="@{viewModel.totalIncome > 0}" />
 
             <View
                 android:id="@+id/view_divider"
