--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -184,127 +184,147 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layout_banner_info">
 
-            <TextView
-                android:id="@+id/tv_income"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_income_top"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/shape_border_radius_4"
-                android:backgroundTint="@color/primary_background"
-                android:paddingHorizontal="6dp"
-                android:paddingVertical="3dp"
-                android:text="@string/income_achievement"
-                android:textAppearance="@style/TextAppearance.Subtitle3"
-                android:textColor="@color/primary_normal"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_month_income"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="20dp"
-                android:text="@{viewModel.totalIncome == 0 ? @string/income_input_hint : viewModel.totalIncomeString}"
-                android:textAppearance="@style/TextAppearance.H7_Bold"
-                android:textColor="@{viewModel.totalIncome == 0 ? @color/coolgray_04 : @color/coolgray_10}"
-                app:layout_constraintStart_toEndOf="@+id/tv_income"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-            <TextView
-                android:id="@+id/tv_bubble_amount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:background="@drawable/background_bubble"
-                android:paddingHorizontal="10dp"
-                android:paddingVertical="2dp"
-                android:textAppearance="@style/TextAppearance.Caption3"
-                android:textColor="@color/white"
-                app:layout_constraintStart_toStartOf="@+id/pb_home"
-                app:layout_constraintTop_toBottomOf="@+id/tv_month_income"
-                tools:text="70%" />
-
-
-            <ImageView
-                android:id="@+id/iv_bubble_below"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="4dp"
-                android:src="@drawable/ic_triangle_down"
-                app:layout_constraintBottom_toTopOf="@+id/pb_home"
-                app:layout_constraintStart_toStartOf="@+id/pb_home" />
-
-            <ProgressBar
-                android:id="@+id/pb_home"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="0dp"
-                android:layout_height="12dp"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="8dp"
-                android:max="100"
-                android:progress="@{(viewModel.progress > 3) ? viewModel.progress : 3 }"
-                android:progressDrawable="@drawable/progressbar_goal"
+                android:paddingBottom="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_bubble_amount"
-                tools:progress="20" />
+                app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/tv_goal_income"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:text="@{viewModel.goalIncome}"
-                android:textAppearance="@style/TextAppearance.Caption3"
-                android:textColor="@color/coolgray_05"
-                app:layout_constraintEnd_toEndOf="@id/pb_home"
-                app:layout_constraintTop_toBottomOf="@id/pb_home" />
+                <TextView
+                    android:id="@+id/tv_income"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/shape_border_radius_4"
+                    android:backgroundTint="@color/primary_background"
+                    android:paddingHorizontal="6dp"
+                    android:paddingVertical="3dp"
+                    android:text="@string/income_achievement"
+                    android:textAppearance="@style/TextAppearance.Subtitle3"
+                    android:textColor="@color/primary_normal"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_month_income"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="20dp"
+                    android:text="@{viewModel.totalIncome == 0 ? @string/income_input_hint : viewModel.totalIncomeString}"
+                    android:textAppearance="@style/TextAppearance.H7_Bold"
+                    android:textColor="@{viewModel.totalIncome == 0 ? @color/coolgray_04 : @color/coolgray_10}"
+                    app:layout_constraintStart_toEndOf="@+id/tv_income"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+                <TextView
+                    android:id="@+id/tv_bubble_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="18dp"
+                    android:background="@drawable/background_bubble"
+                    android:paddingHorizontal="10dp"
+                    android:paddingVertical="4dp"
+                    android:textAppearance="@style/TextAppearance.Caption3"
+                    android:textColor="@color/white"
+                    app:layout_constraintStart_toStartOf="@+id/pb_home"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_month_income"
+                    tools:text="70%" />
+
+
+                <ImageView
+                    android:id="@+id/iv_bubble_below"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginBottom="4dp"
+                    android:src="@drawable/ic_triangle_down"
+                    app:layout_constraintBottom_toTopOf="@+id/pb_home"
+                    app:layout_constraintStart_toStartOf="@+id/pb_home" />
+
+                <ProgressBar
+                    android:id="@+id/pb_home"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="0dp"
+                    android:layout_height="12dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="8dp"
+                    android:max="100"
+                    android:progress="@{(viewModel.progress > 3) ? viewModel.progress : 3 }"
+                    android:progressDrawable="@drawable/progressbar_goal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_bubble_amount"
+                    tools:progress="20" />
+
+                <TextView
+                    android:id="@+id/tv_goal_income"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:text="@{viewModel.goalIncome}"
+                    android:textAppearance="@style/TextAppearance.Caption3"
+                    android:textColor="@color/coolgray_05"
+                    app:layout_constraintEnd_toEndOf="@id/pb_home"
+                    app:layout_constraintTop_toBottomOf="@id/pb_home" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <View
                 android:id="@+id/view_divider"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="20dp"
                 android:background="@color/gray_04"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_goal_income" />
+                app:layout_constraintTop_toBottomOf="@+id/layout_income_top" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layout_move_to_detail"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view_divider">
 
-                <TextView
-                    android:id="@+id/tv_move_to_workbook"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/move_to_workbook"
-                    android:textAppearance="@style/TextAppearance.Subtitle2"
-                    android:textColor="@color/coolgray_06"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent">
 
-                <ImageView
-                    android:id="@+id/iv_move_to_workbook"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:src="@drawable/ic_arrow_right"
-                    app:layout_constraintStart_toEndOf="@+id/tv_move_to_workbook"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    <TextView
+                        android:id="@+id/tv_move_to_workbook"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/move_to_workbook"
+                        android:textAppearance="@style/TextAppearance.Subtitle2"
+                        android:textColor="@color/coolgray_06"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/iv_move_to_workbook"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:src="@drawable/ic_arrow_right"
+                        app:layout_constraintStart_toEndOf="@+id/tv_move_to_workbook"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
